<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('kata_dasars', function (Blueprint $table) {
            $table->id();
            $table->string('kata');
            $table->text('arti')->nullable();
            $table->string('kategori')->nullable(); // misal: salam, angka, warna
            $table->string('berkas_video')->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('kata_dasars');
    }
};
